--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize", "chmod -R 777 app/storage"
+            "php artisan optimize", "chmod -R 777 app"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
